
[TestNoUselessCoalescing/invalid-0 - 1]
Diagnostic 1: uselessCoalescing (1:26 - 1:40)
Message: This coalescing/defaulting operation is unnecessary and can be removed.
   1 | declare const x: string; x ?? 'fallback';
     |                          ~~~~~~~~~~~~~~~
---

[TestNoUselessCoalescing/invalid-1 - 1]
Diagnostic 1: uselessCoalescing (1:26 - 1:31)
Message: This coalescing/defaulting operation is unnecessary and can be removed.
   1 | declare const x: number; x ?? 0;
     |                          ~~~~~~
---

[TestNoUselessCoalescing/invalid-2 - 1]
Diagnostic 1: uselessCoalescing (1:27 - 1:36)
Message: This coalescing/defaulting operation is unnecessary and can be removed.
   1 | declare const x: boolean; x ?? false;
     |                           ~~~~~~~~~~
---

[TestNoUselessCoalescing/invalid-3 - 1]
Diagnostic 1: uselessCoalescing (1:38 - 1:64)
Message: This coalescing/defaulting operation is unnecessary and can be removed.
   1 | declare const obj: { name: string }; obj ?? { name: 'fallback' };
     |                                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~
---

[TestNoUselessCoalescing/invalid-4 - 1]
Diagnostic 1: uselessCoalescing (1:30 - 1:38)
Message: This coalescing/defaulting operation is unnecessary and can be removed.
   1 | declare const arr: string[]; arr ?? [];
     |                              ~~~~~~~~~
---

[TestNoUselessCoalescing/invalid-5 - 1]
Diagnostic 1: redundantUndefinedFallback (1:38 - 1:51)
Message: Fallback to `undefined` is redundant for this expression.
   1 | declare const x: string | undefined; x ?? undefined;
     |                                      ~~~~~~~~~~~~~~
---

[TestNoUselessCoalescing/invalid-6 - 1]
Diagnostic 1: redundantUndefinedFallback (1:38 - 1:48)
Message: Fallback to `undefined` is redundant for this expression.
   1 | declare const x: string | undefined; x ?? void 0;
     |                                      ~~~~~~~~~~~
---

[TestNoUselessCoalescing/invalid-7 - 1]
Diagnostic 1: redundantUndefinedFallback (1:39 - 1:52)
Message: Fallback to `undefined` is redundant for this expression.
   1 | declare const x: boolean | undefined; x ?? undefined;
     |                                       ~~~~~~~~~~~~~~
---

[TestNoUselessCoalescing/invalid-8 - 1]
Diagnostic 1: uselessCoalescing (1:38 - 1:53)
Message: This coalescing/defaulting operation is unnecessary and can be removed.
   1 | declare const obj: { name: string }; obj || undefined;
     |                                      ~~~~~~~~~~~~~~~~
---

[TestNoUselessCoalescing/invalid-9 - 1]
Diagnostic 1: uselessCoalescing (1:38 - 1:64)
Message: This coalescing/defaulting operation is unnecessary and can be removed.
   1 | declare const obj: { name: string }; obj || { name: 'fallback' };
     |                                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~
---

[TestNoUselessCoalescing/invalid-10 - 1]
Diagnostic 1: uselessCoalescing (1:26 - 1:32)
Message: This coalescing/defaulting operation is unnecessary and can be removed.
   1 | declare const x: string; x || '';
     |                          ~~~~~~~
---

[TestNoUselessCoalescing/invalid-11 - 1]
Diagnostic 1: uselessCoalescing (1:27 - 1:36)
Message: This coalescing/defaulting operation is unnecessary and can be removed.
   1 | declare const x: boolean; x || false;
     |                           ~~~~~~~~~~
---

[TestNoUselessCoalescing/invalid-12 - 1]
Diagnostic 1: uselessCoalescing (1:26 - 1:32)
Message: This coalescing/defaulting operation is unnecessary and can be removed.
   1 | declare const x: bigint; x || 0n;
     |                          ~~~~~~~
---

[TestNoUselessCoalescing/invalid-13 - 1]
Diagnostic 1: redundantUndefinedFallback (1:40 - 1:53)
Message: Fallback to `undefined` is redundant for this expression.
   1 | declare const x: string[] | undefined; x || undefined;
     |                                        ~~~~~~~~~~~~~~
---

[TestNoUselessCoalescing/invalid-14 - 1]
Diagnostic 1: redundantUndefinedFallback (1:45 - 1:58)
Message: Fallback to `undefined` is redundant for this expression.
   1 | declare const x: { a: number } | undefined; x || undefined;
     |                                             ~~~~~~~~~~~~~~
---

[TestNoUselessCoalescing/invalid-15 - 1]
Diagnostic 1: redundantUndefinedFallback (1:39 - 1:52)
Message: Fallback to `undefined` is redundant for this expression.
   1 | declare const x: 'hello' | undefined; x || undefined;
     |                                       ~~~~~~~~~~~~~~
---

[TestNoUselessCoalescing/invalid-16 - 1]
Diagnostic 1: uselessCoalescing (1:24 - 1:41)
Message: This coalescing/defaulting operation is unnecessary and can be removed.
   1 | const myVar = 'hello'; myVar ?? undefined;
     |                        ~~~~~~~~~~~~~~~~~~
---

[TestNoUselessCoalescing/invalid-17 - 1]
Diagnostic 1: uselessCoalescing (1:27 - 1:40)
Message: This coalescing/defaulting operation is unnecessary and can be removed.
   1 | declare const x: 'hello'; x ?? undefined;
     |                           ~~~~~~~~~~~~~~
---
